<!--
  ~ Copyright 2021 Chris Cartland. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">Garage</string>
    <string name="last_change_time">Last change: %1$s</string>
    <string name="time_since_last_change">Time since last change: %1$s</string>
    <string name="time_since_last_change_1_second">1 second ago…</string>
    <string name="time_since_last_change_seconds">%1$d seconds ago…</string>
    <string name="time_since_last_change_seconds_generic">Seconds ago…</string>
    <string name="time_since_last_change_1_minute">More than 1 minute ago…</string>
    <string name="time_since_last_change_minutes">More than %1$d minutes ago…</string>
    <string name="time_since_last_change_minutes_generic">Minutes ago…</string>
    <string name="time_since_last_change_10_minutes_generic">More than 10 minutes ago…</string>
    <string name="time_since_last_change_15_minutes_generic">More than 15 minutes ago…</string>
    <string name="time_since_last_change_30_minutes_generic">More than 30 minutes ago…</string>
    <string name="time_since_last_change_45_minutes_generic">More than 45 minutes ago…</string>
    <string name="time_since_last_change_1_hour">More than 1 hour ago…</string>
    <string name="time_since_last_change_hours">More than %1$d hours ago…</string>
    <string name="time_since_last_change_hours_generic">Hours ago…</string>
    <string name="time_since_last_change_1_day">More than 1 day ago…</string>
    <string name="time_since_last_change_days">More than %1$d days ago…</string>
    <string name="time_since_last_check_in">Time since last check-in: %1$s</string>
    <string name="last_check_in_time">"Last check-in: %1$s"</string>
    <string name="version_code_string">App Version %1$s (%2$d)</string>
    <string name="loading_data">Loading data...</string>
    <string name="empty_data">No data.</string>
    <string name="missing_config">Missing server configuration.</string>
    <string name="loading_config">Loading configuration...</string>
    <string name="push_button">Open / Close Garage</string>
    <string name="confirm_push_button">Confirm</string>
    <string name="cancel_push_button">Cancel</string>
    <string name="button_confirmation_title">Do you really want to push the garage door button?</string>
    <string name="button_confirmation_message">CAUTION: Pushing the button will cause the garage door to move.\n\n• Check to make sure no one is near the door.\n• Do not leave the garage unattended.\n\n\You will not be able to push the button again for 30 seconds.</string>
    <string name="disclaimer">This app may contain incorrect data.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="fake_email">email@example.com</string>
    <string name="title_no_data">No Data</string>
    <string name="title_loading">Loading</string>
    <string name="title_door_error">Unknown Status</string>
    <string name="title_door_closed">Door Closed</string>
    <string name="title_door_opening">Opening...</string>
    <string name="title_door_opening_too_long">Check Door</string>
    <string name="title_door_open">Door Open</string>
    <string name="title_door_open_misaligned">Door Open</string>
    <string name="title_door_closing">Closing...</string>
    <string name="title_door_closing_too_long">Check Door</string>
    <string name="title_door_sensor_conflict">Error</string>
</resources>